# Traffic-Density-Classification

./: Hyperparameter_Tuning_CNN.ipynb  grid_search_results.json  main.py  pyproject.toml
dataset/Traffic-Density.v1i.multiclass/: README.dataset.txt  README.roboflow.txt
dataset/Traffic-Density.v1i.multiclass/test/: _classes.csv
dataset/Traffic-Density.v1i.multiclass/train/: _classes.csv
dataset/Traffic-Density.v1i.multiclass/valid/: _classes.csv
notebook/: Baseline_CNN.ipynb  Hyperparameter_Tuning_CNN.ipynb
scraper/: crawler.py
